updated regex email form validation

--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "ed9dee37-22fa-4ba4-b7a3-5e8c6fd4f771"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
