--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~12.2.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.1",
     "firebase": "^9.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
